tests/compile_fail/tuple_struct.rs
use structly::Structly;

#[derive(Structly)]
struct Demo(Option<String>, bool);

fn main() {}
