tests/compile_fail/tuple_struct.stderr
error: only named fields are supported
 --> tests/compile_fail/tuple_struct.rs:4:8
  |
4 | struct Demo(Option<String>, bool);
  |        ^^^^
